--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@ print(integrate.quad(lambda x: special.jv(2.5,x), 0, 4.5))
                   .then(_pyodide => {
                     console.log(`just now ${!!pyodide ? "overriding..." : "new"}`);
                     pyodide = _pyodide;
-                    return pyodide.loadPackage("scipy");
                   })
+                  .then(() => pyodide.loadPackage("scipy"))
+                  .then(() => pyodide.loadPackage("sympy"))
+                  .then(() => pyodide.loadPackage("py-pde"))
                   .then(() => res(pyodide));
                 }
             })
