--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ print(integrate.quad(lambda x: special.jv(2.5,x), 0, 4.5))
                   })
                   .then(() => pyodide.loadPackage("scipy"))
                   .then(() => pyodide.loadPackage("sympy"))
-                  .then(() => pyodide.loadPackage("py-pde"))
+                  .then(() => pyodide.loadPackage("micropip"))
+                  .then(() => pyodide.pyimport("micropip"))
+                  .then(micropip => pyodide.install("py-pde"))
                   .then(() => res(pyodide));
                 }
             })
