--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@ print(integrate.quad(lambda x: special.jv(2.5,x), 0, 4.5))
         });
 
         document.getElementById("btn_pde").addEventListener("click", function() {
-           textareaInput.value = `from sympy import symbols, diff
-x, y, z = symbols('x y z', real=True)
-f = 4*x*y + x*sin(z) + x**3 + z**8*y
-diff(f, x)
-# 4*y + sin(z) + 3*x**2
+           textareaInput.value = `from sympy import symbols, cos, diff
+# sympy.diff auto get PDE / ODE based on whether the input function is multivariable
+# PDE
+print(diff(x**3 * y**5, x))
+print(diff(x**3 * y**5, y))
+
+# ODE
+print(diff(-x**2 + 2 *x + 5, x))
 `;
         });
 
