--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
               width: 100%;
           }
       </style>
+    <script>
+        const worker = new Worker('worker.js');
+        worker.addEventListener('message', e => {
+          console.log(e.data);
+        });
+        worker.postMessage('hello');
+    </script>
   </head>
   <body>
     Pyodide test page <br>
