- update index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Open your browser console to see Pyodide output
  	  <textarea id="textarea_input" rows="10" placeholder="Once upon a time..."></textarea>
     <br>
-    <button id="btn_pde">PDE on sympy</button>
+    <button id="btn_pde">calculus on sympy</button>
     <button id="btn_submit">Submit</button>
     <br>
     <div id="console_output"></div>
