--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+      <link
+        rel="stylesheet"
+        href="https://fred-wang.github.io/MathFonts/LatinModern/mathfonts.css" />
+      <script src="https://fred-wang.github.io/mathjax.js/mpadded-min.js"></script>
       <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
       <style>
           textarea {
